# refluo

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
adr/: 0001-doctrine.md  0002-fee-hook-mutability.md  0003-storage-ttl-map.md  0004-stellar-accounts-integration-corrections.md  0005-oracle-router-isolated-sdk-version.md  0006-risk-engine-isolated-sdk-version-real-integrations.md  0007-timelock-execute-cancel-and-the-self-authorizing-admin-pattern.md  0008-real-admin-multisig-and-the-stellar-cli-signing-gap.md  0009-fuzz-targets-and-the-live-yieldblox-drill.md  0010-oracle-router-real-automated-guardian-crank.md  0011-full-drain-utilization-threshold.md  0012-live-blend-v2-verification.md  0013-risk-profile-abstraction.md  0014-keeper-sentinel-utilization-monitor.md  0015-xlm-fee-floor-auto-swap.md  0016-sdk-signing-module.md  0017-forecaster-tier0-sizing.md  0018-reflector-subscriptions-webhook.md  0019-keeper-reporter-loop.md  0020-healthmonitor-guardian-primitive.md  0021-operator-dashboard.md  0022-healthmonitor-extend.md  0023-risk-engine-cap-enforcement.md
contracts/common/: Cargo.toml
contracts/common/src/: lib.rs
contracts/health-monitor/: Cargo.toml
contracts/health-monitor/src/: lib.rs
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/src/: lib.rs
contracts/mock-price-feed/: Cargo.toml
contracts/mock-price-feed/src/: lib.rs
contracts/oracle-router/: Cargo.toml
contracts/oracle-router/fuzz/: Cargo.toml
contracts/oracle-router/fuzz/fuzz_targets/: pricing_math.rs
contracts/oracle-router/scripts/: testnet_smoke_test.sh
contracts/oracle-router/src/: lib.rs
contracts/policy-admin-threshold/: Cargo.toml
contracts/policy-admin-threshold/src/: lib.rs
contracts/policy-recall/: Cargo.toml
contracts/policy-recall/src/: lib.rs
contracts/policy-session/: Cargo.toml
contracts/policy-session/src/: lib.rs
contracts/policy-swap/: Cargo.toml
contracts/policy-swap/scripts/: testnet_smoke_test.sh
contracts/policy-swap/src/: lib.rs
contracts/policy-venue/: Cargo.toml
contracts/policy-venue/fuzz/: Cargo.toml
contracts/policy-venue/fuzz/fuzz_targets/: blend_submit_decode.rs
contracts/policy-venue/scripts/: testnet_smoke_test.sh
contracts/policy-venue/src/: lib.rs
contracts/risk-engine/: Cargo.toml
contracts/risk-engine/scripts/: testnet_smoke_test.sh
contracts/risk-engine/src/: lib.rs
contracts/timelock/: Cargo.toml
contracts/timelock/scripts/: testnet_smoke_test.sh
contracts/timelock/src/: lib.rs
contracts/vault/: Cargo.toml  README.md
contracts/vault/src/: lib.rs
dashboard/: .env.example  .gitignore  README.md  eslint.config.mjs  package.json
dashboard/scripts/: dashboard_smoke_test.mjs
dashboard/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
dashboard/src/app/api/alerts/: route.ts
dashboard/src/app/api/auth/challenge/: route.ts
dashboard/src/app/api/auth/session/: route.ts
dashboard/src/app/api/auth/verify/: route.ts
dashboard/src/app/api/health-monitor/pause-history/: route.ts
dashboard/src/app/api/health-monitor/status/: route.ts
dashboard/src/app/api/telemetry/: route.ts
dashboard/src/app/api/timelock/proposals/: route.ts
dashboard/src/app/api/vault/addresses/: route.ts
dashboard/src/app/api/vault/overview/: route.ts
dashboard/src/app/api/vault/status/: route.ts
dashboard/src/app/incidents/: page.tsx
dashboard/src/app/reference/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/timelock/: page.tsx
dashboard/src/components/: AlertsPanel.tsx  ChartSkeleton.tsx  ConnectButton.tsx  ContractAddressesPanel.tsx  FreshnessIndicator.tsx  GuardianPanel.tsx  Nav.tsx  OnboardingChecklistPanel.tsx  PanelError.tsx  PanelErrorBoundary.tsx  PanelSkeleton.tsx  PauseHistoryPanel.tsx  SlaTelemetryPanel.tsx  StatusBar.tsx  SystemStateBadge.tsx  ThemeToggle.tsx  TimelockPanel.tsx  VaultOverviewPanel.tsx
dashboard/src/components/charts/: ForecasterErrorChart.tsx  RecallLatencyChart.tsx  Tier0Chart.tsx
dashboard/src/components/ui/: chart.tsx
dashboard/src/hooks/: AuthProvider.tsx  useAnimateOnceOnMount.ts  useApiResource.ts  useAuth.ts  useFreighter.ts
dashboard/src/lib/: alertsConfig.ts  alertsConfigValidation.test.ts  alertsConfigValidation.ts  apiClient.ts  apiError.test.ts  apiError.ts  chartSeries.test.ts  chartSeries.ts  env.ts  formatAmount.test.ts  formatAmount.ts  onboardingChecklist.test.ts  onboardingChecklist.ts  publicConfig.ts  stellar.ts  systemStateStyle.ts  telemetry.ts  withRetry.ts
dashboard/src/lib/actions/: actionError.test.ts  actionError.ts  healthMonitorActions.ts  timelockActions.ts
dashboard/src/lib/auth/: authorization.ts  challenge.test.ts  challenge.ts  getSession.ts  session.test.ts  session.ts  store.ts
dashboard/src/lib/contracts/: healthMonitor.ts  pauseHistory.ts  pauseHistoryState.test.ts  pauseHistoryState.ts  riskProfile.test.ts  riskProfile.ts  systemState.test.ts  systemState.ts  timelockProposals.ts  vaultOverview.ts
drills/: README.md  package.json  refluo_disappears_drill.mjs  xlm_swap_sandwich_drill.sh  yieldblox_drill.sh
keeper/: .env.example  .gitignore  README.md  package-lock.json  package.json
keeper/scripts/: alert_dispatcher_smoke_test.mjs  reflector_webhook_smoke_test.mjs  reporter_smoke_test.mjs  testnet_smoke_test.mjs
keeper/src/: alertDispatcher.test.ts  alertDispatcher.ts  alertDispatcherLoop.ts  decision.test.ts  decision.ts  forecaster.test.ts  forecaster.ts  forecasterLoop.ts  metricsLog.test.ts  metricsLog.ts  reflectorQuorum.test.ts  reflectorQuorum.ts  reflectorSubscription.test.ts  reflectorSubscription.ts  reflectorSubscriptionManager.ts  reflectorWebhookServer.ts  reporter.test.ts  reporter.ts  reporterLoop.ts  sentinel.ts  swap.ts  swapDecision.test.ts  swapDecision.ts
sdk/: README.md  package.json  tsconfig.json
sdk/scripts/: testnet_smoke_test.mjs
sdk/src/: smartAccountAuth.test.ts  smartAccountAuth.ts
