[package]
name = "refluo-oracle-router-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.refluo-oracle-router]
path = ".."

[[bin]]
name = "pricing_math"
path = "fuzz_targets/pricing_math.rs"
test = false
doc = false
bench = false
